<resources>
    <string name="app_name">Logify</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome To LOGIFY</string>
    <string name="title_1">Title One</string>
    <string name="description_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et illum, iste iure laboriosam nulla perspiciatis praesentium quis quisquam sunt vero.</string>
    <string name="title_2">Title Two</string>
    <string name="description_2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et illum, iste iure laboriosam nulla perspiciatis praesentium quis quisquam sunt vero.</string>
    <string name="title_3">Title Three</string>
    <string name="description_3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et illum, iste iure laboriosam nulla perspiciatis praesentium quis quisquam sunt vero.</string>
    <!--    auth login and register-->
    <string name="login_title">Login to Your Account</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_title">Register to Your Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="remember_me">Remember me</string>
    <string name="or">OR</string>
    <string name="login_with_gg">Login With Google</string>
    <string name="policy">By signing up, you agree to our Terms of Service and Privacy Policy</string>
    <string name="cancel">Cancel</string>
    <string name="user_name">User Name</string>
    <!--    otp -->
    <string name="opt_message">We have sent you a verification code to %s. Please enter the code below to verify your phone number.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="dont_receive_otp">Didn\'t receive the code?</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="otp_verify_title">Verify Your Phone Number</string>
    <string name="otp_verify_message">We have sent you a verification code. Please enter the code below to verify your phone number.</string>
    <string name="phone_number_error">Phone number is not valid</string>
    <string name="password_error">Password is not valid</string>
    <string name="confirm_password_error">Confirm password is not valid</string>
    <string name="phone_number_temporary">+01 123 456 798</string>
    <!--    forgot password-->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_message">Please fill phone number and we\'ll send you a link to get back into your account.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>

    <!--    nav-->
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About Us</string>
    <string name="nav_logout">Logout</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="albums">Library</string>
    <string name="alex_xid">Alex Xid</string>
    <string name="contact_email">contact@contact.com</string>
    <string name="open_nav">Open Navigator</string>
    <string name="close_nav">Close Navigator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trend_songs">Trend Songs</string>
    <string name="see_all">See all</string>
    <string name="artist_contributor">Artists Contribution</string>
    <string name="genres_album">Genre Albums</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="back_button">Back Button</string>
    <string name="recently_playlist">Recently Played</string>
    <string name="enter_playlist">Enter playlist name</string>
    <string name="playlist_name">Playlist Name:</string>
    <string name="permission_required">Require Permission</string>
    <string name="upload_bar_title">Choose and upload your favorite songs</string>
    <string name="upload_sub_title">Free and Freeze</string>
    <string name="upload_button">Upload here</string>
    <string name="recent_uploaded">Recent Uploaded</string>
    <string name="empty_upload">You have not uploaded any songs before</string>
    <string name="file_name">xxx.mp3</string>
    <string name="file_size">xxx Kbs</string>
    <string name="save_your_choose">Save Your Choose</string>
    <string name="your_playlist">Your Playlist</string>
    <string name="barcode_title">Scan QR Code\n</string>
    <string name="barcode_description">Scan the album QR code to enjoy the album with your friends \n</string>
    <string name="scan_barcode">Scan QR Code</string>
    <string name="album_qr_code">Album\'s Code</string>
    <string name="qr_code_description">
        Scan the {0} QR code to enjoy the album with your friends
    </string>
    <string name="qr_description">Let share it to your friend and enjoy together</string>
    <string name="share_to_other_app">Share</string>
    <string name="get_from_gallery">From Gallery</string>

</resources>