<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/auth_background"
    tools:context=".auth.SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_with_name" />

    <LinearLayout
        android:id="@+id/login_bound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_32dp"
        android:paddingVertical="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintVertical_bias="0.237">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10dp"
            android:gravity="center_horizontal"
            android:text="@string/login_title"
            android:textColor="@color/flatBlue"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold|italic" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_16dp"
            android:background="@drawable/button_border_white_flat"
            android:paddingHorizontal="@dimen/_8dp"
            android:paddingVertical="12dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/phone_number"
                android:inputType="phone"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_4dp"
            android:background="@drawable/button_border_white_flat"
            android:paddingHorizontal="@dimen/_8dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:buttonTint="@color/FlatWhite"
            android:minHeight="48dp"
            android:text="@string/remember_me"
            android:textColor="@color/FlatWhite" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style_primary"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/FlatWhite"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/montserrat_medium"
            android:letterSpacing="0.1"
            android:text="@string/forgot_password"
            android:textColor="@color/active"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bound">

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/shadow_background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_16dp"
            android:text="@string/or"
            android:textColor="@color/FlatWhite"
            android:textSize="@dimen/_16sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/shadow_background" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineLayout">

        <Button
            android:id="@+id/btnLoginWithGG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border_white_flat"
            android:drawableStart="@drawable/logo_google"
            android:drawablePadding="@dimen/_10dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="@dimen/_10dp"
            android:text="@string/login_with_gg"
            android:textColor="@color/blue_primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:text="@string/dont_have_an_account"
                android:textColor="@color/FlatWhite"
                android:textSize="@dimen/_16sp" />

            <TextView
                android:id="@+id/tvRegisterHref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/active"
                android:textSize="@dimen/_16sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>