<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_40dp"
    android:background="@drawable/auth_background"
    tools:context=".auth.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:text="@string/forgot_password_message"
        android:textColor="@color/FlatWhite"
        android:textSize="@dimen/_16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/_8dp"
        android:paddingVertical="@dimen/_12dp"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/button_border_white_flat"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:hint="@string/phone_number"
            android:textSize="@dimen/_16sp"
            android:inputType="phone"
            android:textColorHint="@color/fifty_percent_black_overlay"
            android:layout_marginStart="@dimen/_4dp"
            android:textColor="@color/fifty_percent_black_overlay"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/_8dp"
        android:paddingVertical="@dimen/_12dp"
        android:layout_marginTop="@dimen/_12dp"
        android:textColorHint="@color/fifty_percent_black_overlay"
        android:background="@drawable/button_border_white_flat"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:hint="@string/new_password"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/fifty_percent_black_overlay"
            android:inputType="textPassword"
            android:textColorHint="@color/fifty_percent_black_overlay"
            android:layout_marginStart="@dimen/_4dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/_8dp"
        android:paddingVertical="@dimen/_12dp"
        android:layout_marginTop="@dimen/_12dp"
        android:background="@drawable/button_border_white_flat"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPasswordCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_new_password"
            android:textColor="@color/fifty_percent_black_overlay"
            android:textSize="@dimen/_16sp"
            android:inputType="textPassword"
            android:textColorHint="@color/fifty_percent_black_overlay"
            android:layout_marginStart="@dimen/_4dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_12dp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bound">

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@drawable/shadow_background"
            android:layout_marginEnd="@dimen/_10dp"
            />


        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10dp"
            android:background="@drawable/shadow_background" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/button_style_primary"
        android:padding="@dimen/_12dp"
        android:text="@string/submit"
        android:textColor="@color/FlatWhite"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:background="@drawable/button_style_transparent"
        android:padding="@dimen/_12dp"
        android:text="@string/cancel"
        android:textColor="@color/FlatWhite"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold" />

</LinearLayout>