<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_background"
    android:orientation="vertical"
    android:padding="@dimen/_40dp"
    tools:context=".auth.OTPVerifyActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/enter_otp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/otp_verify_title"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_16dp"
        android:text="@string/otp_verify_message"
        android:textColor="@color/FlatWhite"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/phone_number_temporary"
        android:textColor="@color/active"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@drawable/otp_edit_text"
            android:maxLines="1"
            android:maxLength="1"
            android:layout_marginEnd="@dimen/_10dp"
            android:inputType="number"
            android:textColor="@color/fifty_percent_black_overlay"
            android:gravity="center" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@drawable/otp_edit_text"
            android:maxLines="1"
            android:maxLength="1"
            android:layout_marginEnd="@dimen/_10dp"
            android:inputType="number"
            android:textColor="@color/fifty_percent_black_overlay"
            android:gravity="center" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@drawable/otp_edit_text"
            android:maxLines="1"
            android:maxLength="1"
            android:layout_marginEnd="@dimen/_10dp"
            android:inputType="number"
            android:textColor="@color/fifty_percent_black_overlay"
            android:gravity="center" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@drawable/otp_edit_text"
            android:maxLines="1"
            android:maxLength="1"
            android:layout_marginEnd="@dimen/_10dp"
            android:inputType="number"
            android:textColor="@color/fifty_percent_black_overlay"
            android:gravity="center" />
        <EditText
            android:id="@+id/otp5"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@drawable/otp_edit_text"
            android:maxLines="1"
            android:maxLength="1"
            android:layout_marginEnd="@dimen/_10dp"
            android:inputType="number"
            android:textColor="@color/fifty_percent_black_overlay"
            android:gravity="center" />
        <EditText
            android:id="@+id/otp6"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_weight="1"
            android:background="@drawable/otp_edit_text"
            android:maxLines="1"
            android:maxLength="1"
            android:inputType="number"
            android:textColor="@color/fifty_percent_black_overlay"
            android:gravity="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:background="@drawable/button_style_primary"
        android:text="@string/verify"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/FlatWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dont_receive_otp"
            android:textColor="@color/FlatWhite"
            android:textSize="@dimen/_16sp"
            />

        <TextView
            android:id="@+id/tvRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp"
            android:textColor="@color/active"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_12dp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/active"
            android:textSize="@dimen/_16sp"
            android:textStyle="bold"
            android:text="00:30"
            android:layout_marginStart="@dimen/_12dp" />
    </LinearLayout>
</LinearLayout>